--- a/about.html
+++ b/about.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A</title>
+    <link href="style/index.css" rel="stylesheet" type="text/css">
+    <title>Dawn D Glatz About</title>
 </head>
 <body>
-    <h1> ABOUT </h1>
+    <div class='container-about'>
+        <header>
+        <h1> Dawn D. Glatz </h1>
+         <nav> 
+           <a href="index.html">Home</a>
+           <a href="about.html">About</a>
+           <a href="contact.html">Contact</a>
+           <a href="projects.html">Projects</a>
+          </nav>
+         </header>
+         </div>
+
+         <section id="about-top">
+            <h2> What to Know a Little About Me?</h2>
+      <div class="facebook">
+      <p> You can send me a friend request on Facebook</p>
+      <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/duskiedawn"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook40x40.png" border=0></a>
+      </div>
+      <div class="twitter">
+        <p> Or fly over to Twitter and see how much I use that</p>
+        <a target="_blank" title="follow me on Twitter" href="https://www.twitter.com/DuskieG"><img alt="follow me on twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter40x40.png" border=0></a>
+      </div>
+      <div class="pinterest">
+        <p>Wanna see how crazy I am about crafting</p>
+        <a target="_blank" title="follow me on pinterest" href="https://www.pinterest.com/duskiedawn"><img alt="follow me on pinterest" src="https://c866088.ssl.cf3.rackcdn.com/assets/pinterest40x40.png" border=0></a>
+      
+        </section>
+       
 </body>
 </html>
